[gd_scene load_steps=35 format=2]

[ext_resource path="res://Scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://Scripts/UIFeedbackCanvas.gd" type="Script" id=2]
[ext_resource path="res://Sprites/Weapon/weapons.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Reticule.png" type="Texture" id=4]
[ext_resource path="res://SFX/shot-handgun.wav" type="AudioStream" id=5]
[ext_resource path="res://icon.png" type="Texture" id=6]
[ext_resource path="res://Scripts/Weapon.gd" type="Script" id=7]

[sub_resource type="CapsuleShape" id=1]
radius = 0.48707
height = 1.20344

[sub_resource type="Animation" id=2]
resource_name = "dead"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Camera:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, -0.75, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("WeaponCanvas/Control/WeaponSprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -65 ), Vector2( 0, 80 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("WeaponCanvas/Control/WeaponSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -65 ), Vector2( 0, 32 ) ]
}

[sub_resource type="Animation" id=4]
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("WeaponCanvas/Control/WeaponSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -65 ) ]
}

[sub_resource type="Animation" id=5]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("WeaponCanvas/Control/WeaponSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 32 ), Vector2( 0, -65 ) ]
}

[sub_resource type="Animation" id=6]
length = 1.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("WeaponCanvas/Control/WeaponSprite:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.8, 1.2, 1.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -65 ), Vector2( -20, -75 ), Vector2( 0, -65 ), Vector2( 20, -75 ), Vector2( 0, -65 ) ]
}

[sub_resource type="AnimationNodeAnimation" id=7]
animation = "down_weapon"

[sub_resource type="AnimationNodeAnimation" id=8]
animation = "still"

[sub_resource type="AnimationNodeAnimation" id=9]
animation = "up_weapon"

[sub_resource type="AnimationNodeAnimation" id=10]
animation = "walking"

[sub_resource type="AnimationNodeStateMachineTransition" id=11]
xfade_time = 0.25

[sub_resource type="AnimationNodeStateMachineTransition" id=12]
xfade_time = 0.25

[sub_resource type="AnimationNodeStateMachineTransition" id=13]

[sub_resource type="AnimationNodeStateMachineTransition" id=14]

[sub_resource type="AnimationNodeStateMachineTransition" id=15]

[sub_resource type="AnimationNodeStateMachineTransition" id=16]

[sub_resource type="AnimationNodeStateMachineTransition" id=17]

[sub_resource type="AnimationNodeStateMachine" id=18]
states/down_weapon/node = SubResource( 7 )
states/down_weapon/position = Vector2( 262.302, 210.78 )
states/still/node = SubResource( 8 )
states/still/position = Vector2( 138, 130 )
states/up_weapon/node = SubResource( 9 )
states/up_weapon/position = Vector2( 262.302, 308 )
states/walking/node = SubResource( 10 )
states/walking/position = Vector2( 409, 130 )
transitions = [ "still", "walking", SubResource( 11 ), "walking", "still", SubResource( 12 ), "up_weapon", "still", SubResource( 13 ), "up_weapon", "walking", SubResource( 14 ), "still", "down_weapon", SubResource( 15 ), "down_weapon", "up_weapon", SubResource( 16 ), "walking", "down_weapon", SubResource( 17 ) ]
graph_offset = Vector2( -219.773, 110.78 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=19]

[sub_resource type="Animation" id=20]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("WeaponCanvas/Control/WeaponSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 12, 11 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("WeaponCanvas/Control/WeaponSprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -10.4, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("WeaponCanvas/Control/WeaponSprite:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -78.88, 70 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=21]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("WeaponCanvas/Control/WeaponSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 11 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("WeaponCanvas/Control/WeaponSprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("WeaponCanvas/Control/WeaponSprite:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=22]
length = 0.4
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("WeaponCanvas/Control/WeaponSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 0 ]
}

[sub_resource type="Animation" id=23]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("WeaponCanvas/Control/WeaponSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=24]
length = 0.9
tracks/0/type = "value"
tracks/0/path = NodePath("WeaponCanvas/Control/WeaponSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 5, 6, 7, 6, 8 ]
}

[sub_resource type="Animation" id=25]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("WeaponCanvas/Control/WeaponSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 8 ]
}

[sub_resource type="Animation" id=26]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("WeaponCanvas/Control/WeaponSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 10, 9 ]
}

[sub_resource type="Animation" id=27]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("WeaponCanvas/Control/WeaponSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 9 ]
}

[node name="Player" type="KinematicBody"]
script = ExtResource( 1 )

[node name="SlopeRayCast" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.59306, 0 )
enabled = true

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.790439, 0 )
far = 300.0

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 1 )

[node name="BobbingPlayer" type="AnimationPlayer" parent="."]
anims/dead = SubResource( 2 )
anims/down_weapon = SubResource( 3 )
anims/still = SubResource( 4 )
anims/up_weapon = SubResource( 5 )
anims/walking = SubResource( 6 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 18 )
anim_player = NodePath("../BobbingPlayer")
active = true
parameters/playback = SubResource( 19 )

[node name="FeedbackCanvas" type="CanvasLayer" parent="."]
script = ExtResource( 2 )

[node name="FeedbackTimer" type="Timer" parent="FeedbackCanvas"]

[node name="HurtColorRect" type="ColorRect" parent="FeedbackCanvas"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -160.0
margin_top = -90.0
margin_right = 160.0
margin_bottom = 90.0
color = Color( 0.784314, 0.0784314, 0.0784314, 0.392157 )

[node name="AmmoColorRect" type="ColorRect" parent="FeedbackCanvas"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -160.0
margin_top = -90.0
margin_right = 160.0
margin_bottom = 90.0
color = Color( 0.0784314, 0.470588, 0.784314, 0.392157 )

[node name="RecoverColorRect" type="ColorRect" parent="FeedbackCanvas"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -160.0
margin_top = -90.0
margin_right = 160.0
margin_bottom = 90.0
color = Color( 0.133333, 0.784314, 0.0784314, 0.392157 )

[node name="RayCast" type="RayCast" parent="."]
enabled = true
cast_to = Vector3( 0, 0, -2000 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/bat = SubResource( 20 )
anims/bat-idle = SubResource( 21 )
anims/handgun = SubResource( 22 )
anims/handgun-idle = SubResource( 23 )
anims/shotgun = SubResource( 24 )
anims/shotgun-idle = SubResource( 25 )
anims/smg = SubResource( 26 )
anims/smg-idle = SubResource( 27 )

[node name="WeaponCanvas" type="CanvasLayer" parent="."]
layer = -1

[node name="Control" type="Control" parent="WeaponCanvas"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0

[node name="WeaponSprite" type="Sprite" parent="WeaponCanvas/Control"]
position = Vector2( 0, -65 )
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 3 )
vframes = 2
hframes = 8
frame = 13

[node name="TextureRect" type="TextureRect" parent="WeaponCanvas"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -8.0
margin_top = -8.0
margin_right = 24.0
margin_bottom = 24.0
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="Placeholder" type="Sprite3D" parent="."]
texture = ExtResource( 6 )

[node name="Weapon" type="Node" parent="."]
script = ExtResource( 7 )
